--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,3 @@
-/* Global Styles */
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,7 +11,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
-/* Nav Bar Styles */
 .nav-bar {
   display: flex;
   justify-content: space-between;
@@ -40,7 +38,6 @@ code {
   margin-left: 10px;
 }
 
-/* Search Bar Styles */
 .search-bar {
   width: 50%; 
   padding: 5px;
@@ -48,7 +45,6 @@ code {
   border-radius: 10px;
 }
 
-/* Profile Image Styles */
 .profile-image {
   width: 40px;
   height: 40px;
@@ -59,20 +55,22 @@ code {
   text-align: center; 
   margin: 20px 0; 
 }
-/* Footer Styles */
+
 .footer {
   align-self: center;
   justify-content: center;
   text-align: center;
   padding: 10px;
+  /*position: fixed; */
   background-color: #f8f8f8;
   font-size: 0.9rem;
   color: #333;
+  width: 100%;
 }
-/* Center form container */
+
 .DiskusijaForma {
   width: 60%;
-  max-width: 600px; /* Optional: restrict max width */
+  max-width: 600px; 
   background-color: #f9f9f9;
   padding: 30px;
   border-radius: 8px;
