--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -266,7 +266,7 @@ button:hover {
 
 #contain {
   height: 65vh;
-  background-image: url('./assets/images/LC_hephaistos.jpg');
+  /*background-image: url('./assets/images/LC_hephaistos.jpg');*/
   padding: 20px;
   display: flex;
   flex-direction: row;
@@ -280,8 +280,8 @@ button:hover {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: white;
-  border-radius: 20px;
+  background-color: #f4f7f6;;
+  border-radius: 12px;
   padding: 20px;
   width: 25%;
   max-width: 460px;
@@ -290,8 +290,8 @@ button:hover {
 }
 
 #data {
-  background-color: white;
-  border-radius: 20px;
+  background-color: #f4f7f6;
+  border-radius: 12px;
   padding: 20px;
   width: 50%;
   max-width:  850px;
@@ -335,7 +335,7 @@ button:hover {
   align-self: end;
   height: 70%;
   background-color: #4CAF50;
-  border-radius: 20px;
+  border-radius: 5px;
   color: white;
   align-content: center;
   font-size: 1em;
