--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -276,7 +276,7 @@ button:active {
 
 /*Stranica KorisnikInfo*/
 
-#contain {
+.prof_contain {
   height: 65vh;
   padding: 20px;
   display: flex;
@@ -286,7 +286,7 @@ button:active {
   font-size: 1.5em;
 }
 
-#card {
+.prof_card {
   width: 25%;
   max-width: 460px;
   max-height: 640px;
@@ -300,7 +300,7 @@ button:active {
   justify-content: space-between;
 }
 
-#data {
+.prof_data {
   width: 50%;
   max-width:  850px;
   max-height: 640px;
@@ -321,21 +321,21 @@ button:active {
   align-items: center;
 }
 
-#title {
+.prof_title {
   font-weight: bold;
   font-size: 2em;
   grid-area: title;
   color: black;
 }
 
-#status {
+.prof_status {
   font-size: 1.5em;
   font-weight: 600;
   border-bottom: 5px solid #4CAF50;
   color: black;
 }
 
-#card img{
+.prof_card img{
   border-radius: 50%;
   align-self: center;
   padding: 10px;
@@ -343,7 +343,7 @@ button:active {
   max-height: 55%;
 }
 
-.uredi{
+.prof_uredi{
   align-self: end;
   height: 70%;
   background-color: #4CAF50;
