--- a/frontend/src/pages/CentarZaPoruke.css
+++ b/frontend/src/pages/CentarZaPoruke.css
@@ -1,10 +1,9 @@
 .message-center {
     max-width: 800px;
     margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ddd;
+    padding: 10px;
     border-radius: 8px;
-    background-color: #f9f9f9;
+    background-color: #ffffff;
 }
 
 h2 {
@@ -15,10 +14,10 @@ h2 {
 .message-box {
     max-height: 500px;
     overflow-y: auto;
-    padding: 10px;
-    background-color: #fff;
-    border: 1px solid #ddd;
+    padding: 20px;
+    background-color: #ffffff;
     border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .message-field {
@@ -26,15 +25,41 @@ h2 {
     padding: 15px;
     border: 1px solid #ddd;
     border-radius: 8px;
-    background-color: #f0f8ff;
+    background-color: #f9fbfd;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
 }
 
 .message-header {
     font-size: 16px;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     color: #007bff;
+    display: flex;
+    justify-content: space-between;
 }
+
+.message-header button {
+    background-image: url(../assets/images/trash-can.png);
+    background-size: 70%; 
+    background-repeat: no-repeat;
+    background-position: center;
+    border: none; 
+    width: 30px; 
+    height: 30px; 
+    cursor: pointer; 
+    outline: none; 
+    background-color: #fe162d; 
+    padding: 0; 
+    box-sizing: border-box; 
+    border-radius: 4px;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.message-header button:hover{
+    background-color: #a11422;
+    transform: scale(1.1);
+}
+
 
 .sender {
     color: #2c3e50;
