--- a/frontend/src/pages/KorisnikInfo.css
+++ b/frontend/src/pages/KorisnikInfo.css
@@ -1,5 +1,5 @@
 #user-details {
-   width: 40%;
+   width:100%;
    height:fit-content;
    margin: 10px auto; 
    padding: 20px;
@@ -97,9 +97,41 @@ button:disabled {
    cursor: not-allowed;
 }
 
+.suvlasnik-message {
+   width: 100%;
+   height: fit-content;
+   margin: 10px auto;
+   padding: 20px;
+   border-radius: 12px;
+   border-color: #218838;
+   background-color: #f4f7f6;
+   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+}
+.suvlasnik-list{
+   display: flex;
+   flex-direction: column;
+}
+.suvlasnik-message-header {
+   font-size: 1.25em;
+   font-weight: bold;
+   margin-bottom: 20px;
+   color: #333;
+}
+
+.suvlasnik-item {
+   display: flex;
+   justify-content: space-between; 
+   flex-direction: column;
+   align-items: center;
+   padding: 15px;
+   border-radius: 8px;
+   background-color: #fff;
+   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+   border: 1px solid #ddd;
+}
 
 .admin-message {
-   width: 40%;
+   width: 70%;
    height: fit-content;
    margin: 10px auto;
    padding: 20px;
@@ -176,13 +208,20 @@ button:disabled {
    cursor: not-allowed;
 }
 
+.admin-message-right2{
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
+}
+
 .admin-message-right2 button {
-   padding: 8px 12px;
+   padding: 5px 5px;
    border: none;
    border-radius: 8px;
    background-color: #dc3545;
    color: white;
    cursor: pointer;
+   margin: 5px;
 }
 
 .admin-message-right2 button:hover {
