--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -61,3 +61,41 @@
 .nav-icon:hover {
    transform: scale(1.1);
 }
+
+@media only screen and (max-width: 680px){
+   .nav-bar {
+      flex-wrap: wrap;
+      justify-content: space-between;
+      padding: 5px 10px 10px 10px;
+   }
+
+   .search-bar{
+      width: 100%;
+      box-sizing: border-box;
+   }
+
+   .nav-left{
+      margin-top: 0px;
+   }
+
+   .nav-right{
+      width: 100%;
+      justify-content: space-between;
+   }
+
+   .nav-center{
+      width: 55%;
+   }
+
+   .logo {
+      width: 32px;
+      height: 32px;
+   }
+
+   .nav-icon{
+      max-width: 32px;
+      max-height: 32px;
+      width: 100%;
+   }
+}
+
