--- a/frontend/src/pages/KorisnikInfo.css
+++ b/frontend/src/pages/KorisnikInfo.css
@@ -1,7 +1,6 @@
 #user-details {
-   width:80%;
+   width: 90%;
    height:fit-content;
-   margin: 10px auto; 
    padding: 20px;
    border-radius: 12px;
    background-color: #f4f7f6;
@@ -98,9 +97,8 @@ button:disabled {
 }
 
 .suvlasnik-message {
-   width: 80%;
+   width: 90%;
    height: fit-content;
-   margin: 10px auto;
    padding: 20px;
    border-radius: 12px;
    border-color: #218838;
@@ -151,9 +149,8 @@ button:disabled {
 }
 
 .admin-message {
-   width: 60%;
+   width: 55%;
    height: fit-content;
-   margin: 10px auto;
    padding: 20px;
    border-radius: 12px;
    border-color: #218838;
@@ -288,4 +285,123 @@ button:disabled {
 
 .admin-message-right2 .set-coowner:disabled:hover {
    background-color: #ccc;
+}
+
+.korisnik_flex{
+   display: flex;
+   justify-content: center;
+   gap: 20px;
+   margin-top: 20px;
+}
+
+.column_container{
+   display: flex;
+   flex-flow: column;
+   align-items: center;
+   margin-top: 0px;
+   gap: 20px;
+   width: 25%;
+}
+
+@media only screen and (max-width: 1700px){
+   .admin-message{
+      width: 80%;
+   }
+
+   .column_container{
+      flex-flow: row;
+      width: 83%;
+      justify-content: center;
+   }
+
+   .korisnik_flex{
+      flex-flow: column;
+      align-items: center;
+      justify-content: center;
+   }
+
+   #user-details{
+      max-width: 50%;
+   }
+
+   .suvlasnik-message{
+      max-width: 50%;
+   }
+
+}
+
+@media only screen and (max-width: 1200px){
+   .admin-message{
+      width: 90%;
+   }
+
+   .column_container{
+      flex-flow: row;
+      width: 95%;
+   }
+
+   .korisnik_flex{
+      flex-flow: column;
+      align-items: center;
+      justify-content: center;
+   }
+
+   #user-details{
+      max-width: 80%;
+   }
+
+   .suvlasnik-message{
+      max-width: 80%;
+   }
+
+   .admin-message-item{
+      flex-flow: column;
+      align-items: center;
+   }
+
+   .admin-message-left{
+      width: 90%;
+      margin-bottom: 5px;
+      border-bottom: 1px solid #ddd;
+   }
+
+   .admin-message-right,
+   .admin-message-right1,
+   .admin-message-right2{
+      margin-top: 5px;
+      width: 100%;
+   }
+}
+
+@media only screen and (max-width: 700px){
+
+   .column_container{
+      width: 90%;
+      flex-flow: column;
+      gap: 10px;
+   }
+
+   #user-details{
+      max-width: 100%;
+   }
+
+   .suvlasnik-message{
+      max-width: 100%;
+   }
+
+   .admin-message{
+      max-width: 80%;
+   }
+
+   .admin-message-left{
+      flex-flow: column;
+      align-items: center;
+      margin-bottom: 5px;
+      border-bottom: 0px;
+   }
+
+   .korisnik_flex{
+      gap: 10px;
+   }
+   
 }
